# hr-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/agents/: ai_agents.py
backend/api/: api_agent.py
backend/llm_clients/: clients.py
backend/memory/: messages.py
backend/tools/: skills.py
backend/utils/: prompts.py
backend/workflow/: orchestrator.py
data/: example.db  example.db-shm  example.db-wal
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
