[project]
name = "ai-agent"
version = "0.1.0"
description = "Technical assessment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.4.0",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.12",
    "langgraph-prebuilt>=1.0.8",
    "langgraph-sdk>=0.3.9",
    "langsmith>=0.7.9",
    "notebook>=7.5.4",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]
